tests/testcases/errors/single-error-on-missing-import-namespace.boo
"""
single-error-on-missing-import-namespace.boo(5,1): BCE0044: expecting "ID", found '<EOL>'.
"""
import #unfortunately the error location is a bit misleading
